Fix numeric input field to fit the screen and be clickable on mobile
Closes #78 and #74

--- a/app/src/assets/styles/views/fevermap-data-entry.scss
+++ b/app/src/assets/styles/views/fevermap-data-entry.scss
@@ -305,6 +305,7 @@ p.mdc-theme--error {
   justify-content: space-around;
   margin-bottom: 2rem;
   .fever-amount-field {
+    z-index: 10;
     width: 4.25rem;
     display: flex;
     align-items: center;
@@ -587,7 +588,7 @@ input[type="range"]::-webkit-slider-runnable-track {
       }
       .fever-amount-display {
         .fever-amount-field {
-          width: 3.25rem;
+          width: 3.75rem;
         }
         p {
           margin: 0;
